# DataAnalysisAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_GUIDE.md  FEATURES.md  README.md  SPEC.md  _gen_dl.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: datasources.yaml  mcp_servers.yaml
data/: generate_test_data.py  import_test_data.py
data_analysis_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/metrics/: gmv.md
features/: 01-infrastructure.md  02-datasource.md  03-connectors.md  04-graph.md  05-tools.md  06-knowledge.md  07-memory.md  08-mcp.md  09-skills.md  10-llm.md  11-api.md  12-security.md  13-analytics.md  14-visualization.md  15-evaluation.md  16-testing.md  17-ops.md  18-frontend.md  19-extensions.md  20-architecture-remediation.md  99-summary.md  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
migrations/: 001_batch1.sql  002_market_data.sql  003_knowledge_governance.sql  004_resource_scopes.sql  005_session_turn_results.sql
scripts/: split_docs.py
skills/custom_report/: SKILL.md  tools.py
skills/data_quality_check/: SKILL.md  tools.py
skills/feature-dev/: SKILL.md
skills/systematic-debugging-data-pipeline/: SKILL.md
spec/: 01-overview.md  02-architecture.md  03-core-components.md  05-tech-stack.md  06-api-design.md  07-data-flow.md  08-security.md  09-roadmap.md  10-design-decisions.md  11-directory-structure.md  12-langgraph-integration.md  13-prompt-templates.md  14-evaluation.md  15-design-review.md  16-architecture-foundation.md  17-major-improvements.md  18-stats-engine.md  19-e2e-test-plan.md  20-e2e-test-cases.md  21-defect-remediation-design.md  22-defect-remediation-implementation-plan.md  23-knowledge-and-data-intelligence-extension-roadmap.md  24-architecture-remediation.md  README.md
src/: app_context.py  bootstrap.py  config.py  data_generation.py  exceptions.py  logging_config.py  main.py  skill_manager.py
src/actions/: __init__.py  contracts.py
src/api/: __init__.py  auth.py  background_tasks.py  middleware.py  routes.py  schemas.py  security_headers.py  streaming.py
src/connectors/: __init__.py  base.py  clickhouse.py  mssql.py  mysql.py  oracle.py  postgres.py  registry.py  sqlite.py
src/datasource/: __init__.py  config.py  credential_manager.py  introspection.py  registry.py  schema_snapshot.py  setup.py
src/db/: __init__.py  migrations.py  utils.py
src/graph/: __init__.py  node_registry.py  state.py  workflow.py
src/knowledge/: __init__.py  asset_models.py  business_rules.py  content_safety.py  datasource_cache.py  doc_loader.py  doc_parser.py  document_assets.py  enum_discovery.py  file_store.py  governance.py  models.py  reranker.py  retrieval.py  retrieval_eval.py  schema_manager.py  structured_assets.py  structured_query.py  system_scanner.py  tag_store.py  (+1 more)
tests/: import_test_data.py  test_actions.py  test_app_context.py  test_architecture_remediation.py  test_bootstrap.py  test_config_security.py  test_data_generation.py  test_dependencies.py  test_e2e_quick.py  test_graph_routing.py  test_llm_provider.py  test_skeleton.py  test_skill_manager_v2.py  test_vector_store.py
(+227 files in other folders)
