[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "LLM 驱动的数据分析智能体"
requires-python = ">=3.12"
authors = [{name = "dev"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "sqlalchemy[asyncio]>=2.0",
    "sqlglot>=25.0",
    "chromadb>=0.5.0",
    "pandas>=2.0",
    "numpy>=2.0",
    "structlog>=24.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "redis>=5.0",
    "sse-starlette>=2.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0",
    "pyjwt>=2.0",
    "cryptography>=41.0",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.20",
    "langgraph-checkpoint-postgres>=3.0",
    "aiohttp>=3.9",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "langsmith>=0.3.0",
]
structured = [
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
]
documents = [
    "PyPDF2>=3.0",
    "python-docx>=1.1",
]
embedded = [
    "django>=4.2,<5.1",
]
embeddings = [
    "sentence-transformers>=3.0",
]
testdata = [
    "faker>=40.0",
]
clickhouse = ["clickhouse-connect>=0.8.0"]
sqlite = ["aiosqlite>=0.20.0"]
mysql = ["aiomysql>=0.2.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "local_llm: 调用快速本地模型的集成、链路或冒烟测试",
    "live_llm: 仅在 RUN_LIVE_LLM_TESTS=1 时调用远程配置模型的测试",
]
filterwarnings = [
    "ignore:'asyncio\\.iscoroutinefunction' is deprecated and slated for removal in Python 3\\.16; use inspect\\.iscoroutinefunction\\(\\) instead:DeprecationWarning:chromadb\\.telemetry\\.opentelemetry.*",
    "ignore:The 'u' type code is deprecated and will be removed in Python 3\\.16:DeprecationWarning",
]
